Added lecture link

--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
 
 <p>Various code snippets, data, notes etc. will be made available here throughout the course.</p>
 
-<p>You might want to check out the <a href="https://github.com/STA250/Stuff/blob/master/STA_250_Syllabus.md">syllabus</a>
-and to complete the <a href="https://docs.google.com/forms/d/1yTSAotsVWZ2eVV98zDJK3-kmszg_o3WpQtbhmp326J4/viewform">pre-course survey</a>.</p>
+<p>Most relevant material will be on the <a href="https://github.com/STA250/">course GitHub page</a>. The lecture slides can
+  be found here:</p>
+  
+<li>
+  <ul><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></ul>
+</li>
 
 <p>Happy coding! :)</p>
       </section>
