--- a/STA_250_Syllabus.html
+++ b/STA_250_Syllabus.html
@@ -38,10 +38,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h1>
-<a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>Stuff</h1>
-
-<h1>STA 250 :: Syllabus</h1>
+<h1><a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>STA 250 :: Syllabus</h1>
 <h2>Advanced Statistical Computation (Baines)</h2>
 <h2>UCD, Fall Quarter, 2013</h2>
 <h5>(Syllabus last updated: 09/14/13)</h5>
