--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
 <p>Various code snippets, data, notes etc. will be made available here throughout the course.</p>
 
-<p>Most relevant material will be on the <a href="https://github.com/STA250/">course GitHub page</a>. The lecture slides can
-  be found here:</p>
+<p>Most relevant material and code will be on the <a href="https://github.com/STA250/">course GitHub page</a>. The syllabus and lecture slides can be found here:</p>
   
 <li>
+  <ul><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></ul>
   <ul><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></ul>
 </li>
 
