Updated main page

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
         </div>
 
         <h1>
-<a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>Stuff</h1>
+<a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>Course Website</h1>
 
-<p>Code + goodies used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
+<p>Welcome to STA 250!</p>
 
-<p>Various code snippets, data, notes etc. will be made available here throughout the course.</p>
+<p>This is the course website, and main portal to code, slides and other materials used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
 
-<p>Most relevant material and code will be on the <a href="https://github.com/STA250/">course GitHub page</a>. The syllabus and lecture slides can be found here:</p>
+<p>Links to various code snippets, data, notes etc. will be made available here throughout the course.</p>
+
+<p>Course code will be hosted on the <a href="https://github.com/STA250/">course GitHub repo</a>. The syllabus and lecture slides can be found here:</p>
   
 <li>
   <ul><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></ul>
