--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <p>Links to various code snippets, data, notes etc. will be made available here throughout the course.</p>
 
 <p>Course code will be hosted on the <a href="https://github.com/STA250/">course GitHub repo</a>. The syllabus and lecture slides can be found here:</p>
-  
-<li>
-  <ul><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></ul>
-  <ul><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></ul>
-</li>
+
+<ul>
+    <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
+</ul>
 
 <p>Happy coding! :)</p>
       </section>
