--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
-    <li><a href="https://github.com/STA250/Stuff/blob/master/HW0/Homework_00.md"><Homework 0/a></li>
+    <li><a href="https://github.com/STA250/Stuff/blob/master/HW0/Homework_00.md">Homework 0</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
