--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 <ul>
     <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
     <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_for_Windows.md">Python for Windows</a></li>
-    <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
-    <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
+    <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
     <li><a href="https://github.com/STA250/Stuff/blob/master/HW0/Homework_00.md">Homework 0</a></li>
 </ul>
 
