--- a/Homework_00.html
+++ b/Homework_00.html
@@ -81,10 +81,10 @@ v &amp; = y\cdot\sin(x) .
 
     <p>a. Simulate from this process with \(\rho=0.9\) and \(n=1000\). Plot the resulting series.</p>
     <p>b. Repeat part (a) 200 times, storing the result in a \(1000\times{}200\) matrix. Each column should correspond to a realization of the random process.</p>
-    <p>c. Compute the mean of the 200 realizations at each time point \((i=1,2,…,1000)\). Plot the means.</p>
-    <p>d. Plot the variance of the 200 realizations at each time point (i=1,2,…,1000)\). Plot the variances.</p>
-    <p>e. Compute the mean of each of the 200 series across time points (j=1,2,…,200)\). Plot the means.</p>
-    <p>f. Compute the variance of each of the 200 series across time points \((j=1,2,\ldots)\). Plot the variances.</p>
+    <p>c. Compute the mean of the 200 realizations at each time points \(t=1,2,\ldots,1000\).<br/> Plot the means.</p>
+    <p>d. Plot the variance of the 200 realizations at each time points \(t=1,2,\ldots,1000\).<br/> Plot the variances.</p>
+    <p>e. Compute the mean of each of the 200 series across time points \(i=1,2,\ldots,200\).<br/> Plot the means.</p>
+    <p>f. Compute the variance of each of the 200 series across time points \(i=1,2,\ldots,200\).<br/> Plot the variances.</p>
     <p>g. Justify the results you have seen in parts b.--f. theoretically.</p></li>
 
     <li>
