--- a/lectures.html
+++ b/lectures.html
@@ -43,22 +43,28 @@
 
 <p>STA 250 Lectures</p>
 
-<div style="float: left; width: 33%;">
+<div style="float: left; width: 25%;">
 <ul>
     <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
 </ul>
 </div>
-<div style="float: left; width: 33%;">
+<div style="float: left; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
 	<li><a href="notes/Lecture_02_Notes_Aden.md">Notes (Aden: md)</a></li>
 </ul>
 </div>
-<div style="float: right; width: 33%;">
+<div style="float: right; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
 	<li><a href="notes/Lecture_02_Notes_Dai.pdf">Notes (Dai: pdf)</a></li>
+</ul>
+</div>
+<div style="float: right; width: 25%;">
+<ul>
+	<li>(No Notetaker)</li>
+	<li><a href="notes/Lecture_02_Notes_Liu.pdf">Notes (Liu: pdf)</a></li>
 </ul>
 </div>
 
