--- a/lectures.html
+++ b/lectures.html
@@ -47,24 +47,28 @@
 <ul>
     <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
+    <li>(No slides)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
 	<li><a href="notes/Lecture_02_Notes_Aden.md">Notes (Aden: md)</a></li>
+	<li>(Coming soon)</li>
 </ul>
 </div>
-<div style="float: right; width: 25%;">
+<div style="float: left; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
 	<li><a href="notes/Lecture_02_Notes_Dai.pdf">Notes (Dai: pdf)</a></li>
+	<li>(Coming soon)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
 	<li><a href="notes/Lecture_02_Notes_Liu.pdf">Notes (Liu: pdf)</a></li>
+	<li>(Coming soon)</li>
 </ul>
 </div>
 
