--- a/Homework_00.html
+++ b/Homework_00.html
@@ -75,7 +75,7 @@ v &amp; = y\cdot\sin(x) .
 
 <li><p>Consider the autoregressive process of order 1, usually called an AR(1) process:<br/>
     \[
-    y_{t} = \rho_{t}y_{t-1} + \epsilon_{t} , \quad \epsilon_{t}\sim{}N(0,1) ,
+    y_{t} = \rho{}y_{t-1} + \epsilon_{t} , \quad \epsilon_{t}\sim{}N(0,1) ,
     \]
     <p>for \(t=1,2,…,n\). Let \(y_{0}=0\) and the \(\epsilon_{t}\) be independent.</p>
 
