Added lecture 03 notes

--- a/lectures.html
+++ b/lectures.html
@@ -53,21 +53,21 @@
 <div style="float: left; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
-	<li><a href="notes/Lecture_02_Notes_Aden.md">Notes (Aden: md)</a></li>
-	<li>(Coming soon)</li>
+	<li>Notes (Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a>)</li>
+	<li>Notes (Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a>)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
-	<li><a href="notes/Lecture_02_Notes_Dai.pdf">Notes (Dai: pdf)</a></li>
+	<li>Notes (Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a>)</li>
 	<li>(Coming soon)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
-	<li><a href="notes/Lecture_02_Notes_Liu.pdf">Notes (Liu: pdf)</a></li>
+    <li>Notes (Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a>)</li>
 	<li>(Coming soon)</li>
 </ul>
 </div>
