--- a/lectures.html
+++ b/lectures.html
@@ -45,6 +45,7 @@
 
 <div style="float: left; width: 25%;">
 <ul>
+    <li>Slides</li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
     <li>(No slides)</li>
@@ -52,22 +53,24 @@
 </div>
 <div style="float: left; width: 25%;">
 <ul>
+    <li>Notes</li>
 	<li>(No Notetaker)</li>
-	<li>Notes (Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a>)</li>
-	<li>Notes (Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a>)</li>
+	<li>Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a></li>
+	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
 <ul>
+    <li>Notes</li>
 	<li>(No Notetaker)</li>
-	<li>Notes (Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a>)</li>
+	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
 	<li>(Coming soon)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
 <ul>
 	<li>(No Notetaker)</li>
-    <li>Notes (Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a>)</li>
+    <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
 	<li>(Coming soon)</li>
 </ul>
 </div>
