--- a/lectures.html
+++ b/lectures.html
@@ -53,7 +53,7 @@
 </div>
 <div style="float: left; width: 25%;">
 <ul>
-    <li>Notes</li>
+    <li>Notetaker 1</li>
 	<li>(No Notetaker)</li>
 	<li>Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a></li>
 	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
@@ -61,7 +61,7 @@
 </div>
 <div style="float: left; width: 25%;">
 <ul>
-    <li>Notes</li>
+    <li>Notetaker 2</li>
 	<li>(No Notetaker)</li>
 	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
 	<li>(Coming soon)</li>
@@ -69,6 +69,7 @@
 </div>
 <div style="float: right; width: 25%;">
 <ul>
+    <li>Notetaker 3</li>
 	<li>(No Notetaker)</li>
     <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
 	<li>(Coming soon)</li>
