--- a/Homework_00.html
+++ b/Homework_00.html
@@ -32,7 +32,7 @@
 
       <section>
         <div id="title">
-          <h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1>
+          <a href="http://sta250.github.io/Stuff"><h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1></a>
           <p>Code + goodies used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/STA250">STA250</a></span>
