--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1>
+          <a href="http://sta250.github.io/Stuff"><h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1></a>
           <p>Code + goodies used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/STA250">STA250</a></span>
@@ -51,7 +51,7 @@
 
 <ul>
     <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
-    <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_for_Windows.md">Python for Windows</a></li>
+    <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_on_Windows.md">Python on Windows</a></li>
     <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
     <li><a href="https://github.com/STA250/Stuff/blob/master/HW0/Homework_00.md">Homework 0</a></li>
 </ul>
