--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
     <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_on_Windows.md">Python on Windows</a></li>
     <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
-    <li><a href="https://github.com/STA250/Stuff/blob/master/HW0/Homework_00.md">Homework 0</a></li>
+    <li><a href="https://github.com/STA250/Stuff/blob/master/HW0/Homework_00.html">Homework 0</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
