--- a/Homework_00.html
+++ b/Homework_00.html
@@ -102,7 +102,7 @@ v &amp; = y\cdot\sin(x) .
     Compare to the asymptotic results reported by <code>lm</code> or computed using the square root of the diagonal elements of \(\hat{\sigma^{2}}(X^{T}X)^{-1}\).</p>
     </li>
 
-<li><p>In this question you will fork the course GitHub repo and upload your homework code to Q1-Q5 to the repo. Go to <a href="https://github.com/STA250/Stuff">https://github.com/STA250/Stuff</a>.</p></li>
+<li><p>In this question you will fork the course GitHub repo and upload your homework code to all previous homework questions to the repo. Go to <a href="https://github.com/STA250/Stuff">https://github.com/STA250/Stuff</a>.</p></li>
 </ol>
 <ul>
 <li>Click on the &quot;Fork&quot; button: <br/><br /><img src="https://raw.github.com/exosamsi/detrending/master/fork.png"><br /></li>
