--- a/lectures.html
+++ b/lectures.html
@@ -48,7 +48,8 @@
     <li>Slides</li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
-    <li>(No slides)</li>
+    <li>Lecture 03 (No Slides)</li>
+    <li>Lecture 04 (No Slides)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -57,6 +58,7 @@
 	<li>(No Notetaker)</li>
 	<li>Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a></li>
 	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
+	<li>(Coming soon)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -64,6 +66,7 @@
     <li>Notetaker 2</li>
 	<li>(No Notetaker)</li>
 	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
+	<li>(Coming soon)</li>
 	<li>(Coming soon)</li>
 </ul>
 </div>
@@ -73,8 +76,17 @@
 	<li>(No Notetaker)</li>
     <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
 	<li>(Coming soon)</li>
+	<li>(Coming soon)</li>
 </ul>
 </div>
+
+<h3>References</h3>
+<ul>
+    <li>Lecture 04 References:</li>
+    <li><a href="http://bayesian.org/events/valencia/1979JRSSB.pdf">Bernardo, J.M. (1979) Reference Posterior Distributions for Bayesian Inference. JRSSB, 41, 2, pp. 113-147</a></li>
+    <li><a href="http://www.jstor.org/stable/2984298">Welch, B.L. and Peers, H.W. (1963) On formulae for confidence points based on integrals of weighted likelihoods. JRRSB, 25-2, pp. 318-329</a></li>
+    <li><a href="http://projecteuclid.org/euclid.ba/1340371036">Goldstein, M. (2006) Subjective Bayesian Analysis: Principles and Practice. Bayesian Analysis, 1-3, pp. 403-420.</a></li>
+</ul>
 
 <p>Happy coding! :)</p>
       </section>
