--- a/lectures.html
+++ b/lectures.html
@@ -48,8 +48,8 @@
     <li>Slides</li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
-    <li>Lecture 03 (No Slides)</li>
-    <li>Lecture 04 (No Slides)</li>
+    <li>Lecture 03</li>
+    <li>Lecture 04</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -79,7 +79,7 @@
 	<li>(Coming soon)</li>
 </ul>
 </div>
-
+<br/><br/>
 <h3>References</h3>
 <ul>
     <li>Lecture 04 References:</li>
