--- a/lectures.html
+++ b/lectures.html
@@ -66,7 +66,7 @@
     <li>Notetaker 2</li>
 	<li>(No Notetaker)</li>
 	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
-	<li>(Coming soon)</li>
+	<li>Huang: <a href="notes/Lecture_03_Notes_Huang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Huang.pdf">pdf</a></li>
 	<li>(Coming soon)</li>
 </ul>
 </div>
