Added practice problems

--- a/lectures.html
+++ b/lectures.html
@@ -81,8 +81,8 @@
 </div>
 <br/><br/>
 <h3>References</h3>
+<p>Lecture 04 References:</p>
 <ul>
-    <li>Lecture 04 References:</li>
     <li><a href="http://bayesian.org/events/valencia/1979JRSSB.pdf">Bernardo, J.M. (1979) Reference Posterior Distributions for Bayesian Inference. JRSSB, 41, 2, pp. 113-147</a></li>
     <li><a href="http://www.jstor.org/stable/2984298">Welch, B.L. and Peers, H.W. (1963) On formulae for confidence points based on integrals of weighted likelihoods. JRRSB, 25-2, pp. 318-329</a></li>
     <li><a href="http://projecteuclid.org/euclid.ba/1340371036">Goldstein, M. (2006) Subjective Bayesian Analysis: Principles and Practice. Bayesian Analysis, 1-3, pp. 403-420.</a></li>
