Added more practice problems and link

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
     <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_on_Windows.md">Python on Windows</a></li>
     <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
+    <li><a href="http://sta250.github.io/Stuff/practice_problems.html">Practice Problems</a></li>
     <li><a href="http://sta250.github.io/Stuff/Homework_00.html">Homework 0</a></li>
 </ul>
 
