--- a/lectures.html
+++ b/lectures.html
@@ -75,7 +75,7 @@
     <li>Notetaker 3</li>
 	<li>(No Notetaker)</li>
     <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
-	<li>(Coming soon)</li>
+	<li>Wang: <a href="notes/Lecture_03_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Wang.pdf">pdf</a></li>
 	<li>(Coming soon)</li>
 </ul>
 </div>
