Added more lecture notes

--- a/lectures.html
+++ b/lectures.html
@@ -58,7 +58,7 @@
 	<li>(No Notetaker)</li>
 	<li>Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a></li>
 	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
-	<li>(Coming soon)</li>
+	<li>Werner: <a href="notes/Lecture_04_Notes_Werner.tar.gz">tex</a>, <a href="notes/Lecture_04_Notes_Werner.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -67,7 +67,7 @@
 	<li>(No Notetaker)</li>
 	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
 	<li>Huang: <a href="notes/Lecture_03_Notes_Huang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Huang.pdf">pdf</a></li>
-	<li>(Coming soon)</li>
+	<li>Gao: <a href="notes/Lecture_04_Notes_Gao.tex">tex</a>, <a href="notes/Lecture_04_Notes_Gao.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
