--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <ul>
     <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
     <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_on_Windows.md">Python on Windows</a></li>
+    <li><a href="http://sta250.github.io/Stuff/sync_fork">Syncing a Forked GitHub Repo</a></li>
     <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
     <li><a href="http://sta250.github.io/Stuff/practice_problems.html">Practice Problems</a></li>
     <li><a href="http://sta250.github.io/Stuff/Homework_00.html">Homework 0</a></li>
