Added lecture refernces

--- a/lectures.html
+++ b/lectures.html
@@ -81,11 +81,18 @@
 </div>
 <br/><br/>
 <h3>References</h3>
-<p>Lecture 04 References:</p>
+<p>Lecture 04 References (Bayes Lecture 1):</p>
 <ul>
     <li><a href="http://bayesian.org/events/valencia/1979JRSSB.pdf">Bernardo, J.M. (1979) Reference Posterior Distributions for Bayesian Inference. JRSSB, 41, 2, pp. 113-147</a></li>
     <li><a href="http://www.jstor.org/stable/2984298">Welch, B.L. and Peers, H.W. (1963) On formulae for confidence points based on integrals of weighted likelihoods. JRRSB, 25-2, pp. 318-329</a></li>
     <li><a href="http://projecteuclid.org/euclid.ba/1340371036">Goldstein, M. (2006) Subjective Bayesian Analysis: Principles and Practice. Bayesian Analysis, 1-3, pp. 403-420.</a></li>
+</ul>
+
+<p>Lecture 05 References (Bayes Lecture 2):</p>
+<ul>
+    <li><a href="http://www.people.fas.harvard.edu/~plam/teaching/methods/mcmc/mcmc.pdf">Patrick Lam's MCMC Overview</a></li>
+    <li><a href="https://vpn.lib.ucdavis.edu/content/m28q35/,DanaInfo=www.springerlink.com+#section=59276&page=11&locus=51">Hoff, P.D. (2009) A First Course in Bayesian Statistical Methods (Ch 7: Multivariate Normal, Ch 10: Metropolis-Hastings)</a></li>
+    <li><a href="http://www.mcmchandbook.net/HandbookChapter1.pdf">Geyer, C.J. (2011) Introduction to MCMC in The MCMC Handbook, Chapman and Hall/CRC.</a></li> 
 </ul>
 
 <p>Happy coding! :)</p>
